--- a/array.html
+++ b/array.html
@@ -7,7 +7,12 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>JavaScript in HTML</h1>
-    <script type="text/javascript" src="firstclass.js"></script>
+    <script>
+      var list = ["tiger", "cat", "bear", "bird"];
+      console.log(list[1]);
+
+      var list = [["tiger", "cat", "bear", "bird"]];
+      console.log(list[0][2]);
+    </script>
   </body>
 </html>
