--- a/index.html
+++ b/index.html
@@ -1,32 +1,66 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Startup</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat"
-      rel="stylesheet"
-    />
-
-    <!-- Note that the below Bootstrap file is a specific version. If you grab the most
-    current from Bootstrap website, you will see the button grow transition being a lot faster
-    than in my video.  Use whichever style sheet you like best! -->
-    <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-      crossorigin="anonymous"
-    />
-    <!-- My own stylesheet -->
-    <link href="style.css" rel="stylesheet" />
+    <title>Layout Master</title>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <nav class="zone blue sticky">
+      <ul class="main-nav">
+        <li><a href="">About</a></li>
+        <li><a href="">Products</a></li>
+        <li><a href="">Our Team</a></li>
+        <li class="push"><a href="">Contacts</a></li>
+      </ul>
+    </nav>
+    <div class="container zone">
+      <img
+        class="cover"
+        src="https://i.pinimg.com/originals/48/65/93/486593d3e3c29e23ffd87bdc0d769166.jpg"
+      />
+    </div>
+    <div class="zone blue grid-wrapper">
+      <div class="box zone">
+        <img
+          src="C:\Users\Bruna Sofie\Desktop\Udemy\Seção 9 - CSS Grid e Layout\CSS Layout\img\data_storage_2_2.png"
+        />
+      </div>
+      <div class="box zone">
+        <img
+          src="C:\Users\Bruna Sofie\Desktop\Udemy\Seção 9 - CSS Grid e Layout\CSS Layout\img\desktop_analytics_2.png"
+        />
+      </div>
+      <div class="box zone">
+        <img
+          src="C:\Users\Bruna Sofie\Desktop\Udemy\Seção 9 - CSS Grid e Layout\CSS Layout\img\files_2.png"
+        />
+      </div>
+      <div class="box zone">
+        <img
+          src="C:\Users\Bruna Sofie\Desktop\Udemy\Seção 9 - CSS Grid e Layout\CSS Layout\img\monitor_coding_2.png"
+        />
+      </div>
+      <div class="box zone">
+        <img
+          src="C:\Users\Bruna Sofie\Desktop\Udemy\Seção 9 - CSS Grid e Layout\CSS Layout\img\monitor_settings_2.png"
+        />
+      </div>
+      <div class="box zone">
+        <img
+          src="C:\Users\Bruna Sofie\Desktop\Udemy\Seção 9 - CSS Grid e Layout\CSS Layout\img\server_2_2.png"
+        />
+      </div>
+      <div class="box zone">
+        <img
+          src="C:\Users\Bruna Sofie\Desktop\Udemy\Seção 9 - CSS Grid e Layout\CSS Layout\img\server_3.png"
+        />
+      </div>
+      <div class="box zone">
+        <img
+          src="C:\Users\Bruna Sofie\Desktop\Udemy\Seção 9 - CSS Grid e Layout\CSS Layout\img\server_safe_2.png"
+        />
+      </div>
+    </div>
+    <footer class="zone yellow">Footer</footer>
+  </body>
 </html>
